@@ -1,7 +1,7 @@
 Package: wrv
 Type: Package
 Version: 1.0.2
-Date: 2016-06-22
+Date: 2016-07-02
 Title: Wood River Valley Groundwater-Flow Model
 Author: Jason C. Fisher
 Maintainer: Jason C. Fisher <jfisher@usgs.gov>
