@@ -14,7 +14,7 @@
 \raggedright{}
 \item[Type]\AsIs{Package}
 \item[Version]\AsIs{1.0.2}
-\item[Date]\AsIs{2016-06-22}
+\item[Date]\AsIs{2016-07-02}
 \item[Title]\AsIs{Wood River Valley Groundwater-Flow Model}
 \item[Author]\AsIs{Jason C. Fisher}
 \item[Maintainer]\AsIs{Jason C. Fisher }\email{jfisher@usgs.gov}\AsIs{}
