@@ -1,6 +1,8 @@
 Changes in Version 1.0.2
 
-  o  ...
+  o  Fix NOTES associated with running R CMD check.
+
+  o  Add published Scientific Investigations Report 2016-5080 to .inst/doc folder.
 
 Changes in Version 1.0.1
 
